[gd_scene load_steps=12 format=3 uid="uid://d3ng7e8pcqr5y"]

[ext_resource type="Script" path="res://scenes/DifficultyMenu.gd" id="1_46n1u"]
[ext_resource type="Texture2D" uid="uid://pgvfxopy20t8" path="res://assets/buttons/Classic Game Button.png" id="1_vqhew"]
[ext_resource type="Texture2D" uid="uid://yci34fgh1isc" path="res://assets/buttons/Classic Game Button Clicked.png" id="2_gqsdw"]
[ext_resource type="Texture2D" uid="uid://cqv83lidy1va7" path="res://assets/buttons/Easy Button.png" id="3_ukoeo"]
[ext_resource type="Texture2D" uid="uid://c66l0qb3msq7e" path="res://assets/buttons/Easy Button Clicked.png" id="4_jt3pq"]
[ext_resource type="Texture2D" uid="uid://xfn1lij2n1xl" path="res://assets/buttons/Medium Game Button.png" id="5_clmsm"]
[ext_resource type="Texture2D" uid="uid://dkr3a2fk70idx" path="res://assets/buttons/Medium Game Button Clicked.png" id="6_7bcod"]
[ext_resource type="Texture2D" uid="uid://by4nbmvdc20xv" path="res://assets/buttons/Hard Game Button.png" id="7_jcovg"]
[ext_resource type="Texture2D" uid="uid://cyx52ijmt1pkg" path="res://assets/buttons/Hard Game Button Clicked.png" id="8_r58ws"]
[ext_resource type="Texture2D" uid="uid://dde4gf74xjip5" path="res://assets/buttons/Impossible Game Button.png" id="9_7cb3b"]
[ext_resource type="Texture2D" uid="uid://cljt5rdek20em" path="res://assets/buttons/Impossible Game Button Clicked.png" id="10_2t8mv"]

[node name="DifficultyMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_46n1u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -95
alignment = 1

[node name="ClassicButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_vqhew")
texture_pressed = ExtResource("2_gqsdw")

[node name="EasyButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_ukoeo")
texture_pressed = ExtResource("4_jt3pq")

[node name="MediumButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 212)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_clmsm")
texture_pressed = ExtResource("6_7bcod")

[node name="HardButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_jcovg")
texture_pressed = ExtResource("8_r58ws")

[node name="ImpossibleButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_7cb3b")
texture_pressed = ExtResource("10_2t8mv")

[connection signal="pressed" from="MarginContainer/VBoxContainer/ClassicButton" to="." method="on_classic_select"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EasyButton" to="." method="on_easy_select"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MediumButton" to="." method="on_medium_select"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HardButton" to="." method="on_hard_select"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ImpossibleButton" to="." method="on_impossible_select"]
